--- a/src/main/resources/com/projectgalen/app/jpafrommysql/messages.properties
+++ b/src/main/resources/com/projectgalen/app/jpafrommysql/messages.properties
@@ -1,4 +1,5 @@
 #
+menu.file.open=Open...
 msg.err.missing_filename=Expected filename after "%s" but didn't get one.
 msg.err.settings_load_failure=Unable to load settings from "%s": %s
 msg.err.settings_save_failure=Unable to save settings to "%s": %s
